--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Royal Rummy</title>
+    <title>Royally Rummy</title>
     <link rel="stylesheet" href="style.css" />
     <script src="script.js"></script>
   </head>
@@ -17,7 +17,7 @@
       </div>
       <div class="right">
         <div class="titles">
-          <span>ROYAL RUMMY</span>
+          <span>ROYALLY RUMMY</span>
           <h2>India's Safest Rummy Game</h2>
           <h2>Free Download</h2>
         </div>
