--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>Royally Rummy</title>
     <link rel="stylesheet" href="style.css" />
     <script src="script.js"></script>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+    />
   </head>
   <body>
     <!-- header sectin starts -->
@@ -31,6 +35,7 @@
             <div class="logoo">
               <img src="./phone.png" alt="" />
             </div>
+
             <h1>Free Registration</h1>
           </div>
         </a>
@@ -64,8 +69,16 @@
         <div class="modelimages">
           <img src="./Rummy-Counter-2 (1).webp" alt="" />
         </div>
-        <button class="btn">Download Now</button>
       </div>
+    </div>
+    <div
+      style="
+        background-color: rgb(8, 61, 162);
+        padding: 10px 0;
+        margin-top: -17px;
+      "
+    >
+      <button class="btn">Download Now</button>
     </div>
     <!-- models seection ends -->
 
