--- a/index.html
+++ b/index.html
@@ -30,33 +30,29 @@
     <!-- header sectin ends -->
     <div class="cotegories">
       <div class="container">
-        <a href="">
-          <div class="tags">
-            <div class="logoo">
-              <img src="./phone.png" alt="" />
-            </div>
-
-            <h1>Free Registration</h1>
+        <div class="tags">
+          <div class="logoo">
+            <img src="./call1.svg" alt="" />
           </div>
-        </a>
-        <a href="">
-          <div class="tags">
-            <div class="logoo">
-              <img src="./audience.png" alt="" />
-            </div>
 
-            <h1>24x7 Support</h1>
-          </div>
-        </a>
-        <a href="">
-          <div class="tags">
-            <div class="logoo">
-              <img src="./money.png" alt="" />
-            </div>
+          <h1>Free Registration</h1>
+        </div>
 
-            <h1>50 Welcome Bonus</h1>
+        <div class="tags">
+          <div class="logoo">
+            <img src="./audience1.svg" alt="" />
           </div>
-        </a>
+
+          <h1>24x7 Support</h1>
+        </div>
+
+        <div class="tags">
+          <div class="logoo">
+            <img src="./money.png" alt="" />
+          </div>
+
+          <h1>50 Welcome Bonus</h1>
+        </div>
       </div>
     </div>
     <a href="">
