--- a/index.html
+++ b/index.html
@@ -21,9 +21,11 @@
       </div>
       <div class="right">
         <div class="titles">
-          <span>ROYALLY RUMMY</span>
-          <h2>India's Safest Rummy Game</h2>
-          <h2>Free Download</h2>
+          <a href="">
+            <span style="color: white">ROYALLY RUMMY</span>
+            <h2>India's Safest Rummy Game</h2>
+            <h2>Free Download</h2>
+          </a>
         </div>
       </div>
     </header>
@@ -60,13 +62,15 @@
     </a>
 
     <!-- models seection starts -->
-    <div class="models">
-      <div class="container">
-        <div class="modelimages">
-          <img src="./Rummy-Counter-2 (1).webp" alt="" />
+    <a href="">
+      <div class="models">
+        <div class="container">
+          <div class="modelimages">
+            <img src="./Rummy-Counter-2 (1).webp" alt="" />
+          </div>
         </div>
       </div>
-    </div>
+    </a>
     <div
       style="
         background-color: rgb(8, 61, 162);
@@ -74,7 +78,9 @@
         margin-top: -17px;
       "
     >
-      <button class="btn">Download Now</button>
+      <a href="">
+        <button class="btn">Download Now</button>
+      </a>
     </div>
     <!-- models seection ends -->
 
